--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -19,5 +19,5 @@ services:
       - ${DB_PORT}:3306
     environment:
       - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
-      - MYSQL_DATABASE=greenbay-db
+      - MYSQL_DATABASE=${DB_NAME}
 
